--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	"scripts": {
 		"build": "npm run lint && webpack --mode production",
 		"lint": "prettier --check . && eslint src --ext mjs,js,ts",
-		"format": "prettier --write . && eslint src --ext mjs,js,ts --fix"
+		"format": "prettier --write . && eslint src --ext mjs,js,ts --fix",
+		"publish": "npm run format && npm run build && vsce package && code --install-extension discord-vscode-5.8.0.vsix"
 	},
 	"activationEvents": [
 		"*"
@@ -153,6 +154,11 @@
 						"type": "number",
 						"default": 0,
 						"description": "Time (in seconds) to clear the presence when idling. 0 (the default) means no clearing"
+					},
+					"discord.statusPrompt:": {
+						"type": "string",
+						"default": "Describe the code snippet in a single short sentence. Be efficient with your words. Format it in a way which describes the developer's activity, without revealing specifics. Respond in first-person from the developer's perspective.",
+						"description": "The prompt for the GPT-generated status"
 					},
 					"discord.openaiApiKey": {
 						"type": "string",
